<resources>
    <string name="app_name">Final Project</string>
    <string name="name_plant">Name your plant:</string>
    <string name="hint">Addie</string>
    <string name="start"> Start!</string>
    <string name="name">Name</string>
    <string name="health">Health:</string>
    <string name="happiness">Happiness:</string>
    <string name="health_max"> 50</string>
    <string name="health_status"> / 50</string>
    <string name="water_btn">Water</string>
    <string name="nutrients_btn">Give nutrients</string>
    <string name="compliment_btn">Compliment</string>
    <string name="insult_btn">Insult</string>
    <string name="game_over">GAME OVER.</string>
    <string name="try_again">Try again?</string>

</resources>